--- a/DDTVLiveRec/App.config
+++ b/DDTVLiveRec/App.config
@@ -58,7 +58,10 @@
     <add key="CosRegion" value=""/><!--cos桶区域，格式为xx-xxxx-->
     <add key="CosBucket" value=""/><!--cos桶名称，格式为bucketname-appid-->
     <add key="CosPath" value=""/>
-
+    <add key="EnableBaiduPan" value="0"/><!--百度网盘上传(0:关闭，其他:上传顺序) 需提前登录-->
+    <add key="BaiduPanPath" value=""/>
+    <add key="EnableAliPan" value="0"/><!--阿里网盘上传(0:关闭，其他:上传顺序) 需提前配置config文件-->
+    <add key="AliPanPath" value=""/>
     <add key="AutoTranscodingDelFile" value="0" /><!--转码后自动删除文件-->
   </appSettings>
   <system.net>
